--- a/templates/west_end_market/add_listing.html
+++ b/templates/west_end_market/add_listing.html
@@ -52,7 +52,7 @@
                 </div>
                         
                 <div class="text-right">
-                    <button class="btn btn-outline-primary" type="submit" value="submit" >Create</button>
+                    <button class="btn btn-primary block-button" type="submit" value="submit" >Create</button>
                     <button class="btn btn-outline-secondary" type="submit" value="submit" disabled>Update</button>
                 </div>
             </div>
