--- a/templates/west_end_market/base.html
+++ b/templates/west_end_market/base.html
@@ -78,7 +78,8 @@
         </div>
         
         
-        <div class="navbar footer" style="background-color: #212121;">
+        <div class="navbar footer2" style="background-color: #212121;">
+        <div class="navbar footer2" style="background-color: #212121;">
             <!-- DUMMY FOOTER TEXT -->
             <h3>FOOTER</h3>
             <p>LLorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. </p>
