--- a/templates/west_end_market/listing.html
+++ b/templates/west_end_market/listing.html
@@ -16,21 +16,24 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="margin-bottom-20 text-center">
-                        <img src="{{listing.picture.url}}" alt="image of the item" width=200 height=200>
+                        <div class="container">
+                            <img src="{{listing.picture.url}}" class="height-200 width-200" alt="image of the item">
+                        </div>
+                        
                     </div>
                 </div>
                 <div class="text-box col-md-9">
                     <div class="row">
-                        <p>Description: {{listing.description}}</p>
+                        <p><strong>Description: </strong>{{listing.description}}</p>
                     </div>
                     <div class="row">
-                        <p>Price: £{{listing.price}}</p>
+                        <p><strong>Price: </strong>£{{listing.price}}</p>
                     </div>
                     <div class="row">
-                        <p>Category: {{listing.category}}</p>
+                        <p><strong>Category: </strong>{{listing.category}}</p>
                     </div>
                     <div class="row">
-                        <p>Postcode: {{listing.postcode}}</p>
+                        <p><strong>Postcode: </strong>{{listing.postcode}}</p>
                     </div>
                 </div>
             </div>
@@ -39,16 +42,15 @@
                     <p>Comments:</p>
 
                     {% for comment in comments %}
-                    <div class="comment">
-                        <div class="date">{{ comment.date }}</div>
-                        <strong>{{ comment.user }}</strong>
-                        <p>{{ comment.comment|linebreaks }}</p>
+                    <div class="comment-container">
+                        <div class="date"><strong>{{ comment.user }}</strong> - {{ comment.date }}
+                        <br>{{ comment.comment|linebreaks }}</div>
                     </div>
                     {% endfor %}
                     {% if user.is_authenticated %}
                         <form method="POST" class="post-form" action="{% url 'show_listing' listing.id %}">{% csrf_token %}
                             <textarea required id="id_comment" class="form-control font-italic" placeholder="Enter comment here..." name="comment"></textarea>
-                            <button type="submit" class="save btn btn-default">Add comment</button>
+                            <button type="submit" class="save btn btn-primary block-button margin-top-20">Add comment</button>
                         </form>
                     {% endif %}
                 </div>
