--- a/static/resourses/css/styleaddons.css
+++ b/static/resourses/css/styleaddons.css
@@ -70,8 +70,18 @@ h2{
 /* SPECIAL CASES CSS */
 /* --------------------------------------------------- */
 .footer{
+/*
     color: #FFFFFF;
     margin-top: 10px;
+*/
+    background-color: #212121;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
+    text-align: center;
 }
 
 /* --------------------------------------------------- */
@@ -126,9 +136,10 @@ h2{
 }
 
 .text-box {
-    background-color:rgb(245, 245, 245);
+    background-color: rgb(250, 250, 250);
     border-radius: 20px;
-    padding: 10px 30px;
+    padding: 20px 30px;
+    margin-bottom: 10px;
 }
 
 .width-100 {
@@ -143,3 +154,28 @@ h2{
 
 
 
+
+.width-200 {
+    width: 200px;
+    object-fit: cover;
+}
+
+.footer2 {
+    margin-top: 10px;
+    position: relative;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    color: white;
+}
+
+.margin-top-20 {
+    margin-top: 20px;
+}
+
+.comment-container {
+    background-color: rgb(235, 235, 235);
+    padding: 5px 10px;
+    margin: 10px 0px;
+    border-radius: 10px;
+}
