--- a/templates/west_end_market/loginpage.html
+++ b/templates/west_end_market/loginpage.html
@@ -13,7 +13,7 @@
             </div>
             <div class="container">
                 <div class="row margin-top-30">
-                    <div class="col-md-5">
+                    <div class="col-md-5  font-weight-bold">
                         <form id="login_form" method="post" action="{% url 'login' %}">
                             {% csrf_token %}
                             <div class="form-group">
