--- a/templates/west_end_market/index.html
+++ b/templates/west_end_market/index.html
@@ -10,7 +10,7 @@
 
 {% block body_block %}
 
-<div class="container margin-top-30">
+<div class="container margin-top-30 content">
     <h2>Welcome!</h2>
     <h5>Recent Listings:</h5>
     <hr>
