--- a/static/resourses/css/styleaddons.css
+++ b/static/resourses/css/styleaddons.css
@@ -16,7 +16,7 @@
 /* BASIC SETUP */
 /* --------------------------------------------------- */
 html, body{
-    height: 100%
+    height: 100%;
 }
 
 html {
@@ -26,9 +26,15 @@ html {
     font-weight: 400;
     font-size: 18px;
     text-rendering: optimizeLegibility;
+    min-height: 100%;
 }
 
-body { padding-bottom: 70px; }
+body {
+    min-height: 100%;
+    position: relative;
+    margin: 0;
+    padding-bottom: 80px;
+}
 
 
 /* --------------------------------------------------- */
@@ -37,22 +43,6 @@ body { padding-bottom: 70px; }
 
 h2{
     color: #FF5722;
-}
-
-.margin-right-20 {
-    margin-right: 20px;
-}
-
-.margin-right-40 {
-    margin-right: 40px;
-}
-
-.margin-top-30 {
-    margin-top: 30px;
-}
-
-.margin-top-10 {
-    margin-top: 10px;
 }
 
 .desktop-block-button { 
@@ -66,22 +56,32 @@ h2{
     text-align: left;
 }
 
+.text-box {
+    background-color: rgb(250, 250, 250);
+    border-radius: 20px;
+    padding: 20px 30px;
+    margin-bottom: 10px;
+}
+
+.comment-container {
+    background-color: rgb(235, 235, 235);
+    padding: 5px 10px;
+    margin: 10px 0px;
+    border-radius: 10px;
+}
+
+.helptext {
+    font-size: 14px;
+    color: rgb(200, 200, 200);
+}
+
+
 /* --------------------------------------------------- */
-/* SPECIAL CASES CSS */
+/* FOOTER */
 /* --------------------------------------------------- */
-.footer{
-/*
-    color: #FFFFFF;
-    margin-top: 10px;
-*/
+.footer-style {
     background-color: #212121;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: red;
     color: white;
-    text-align: center;
 }
 
 /* --------------------------------------------------- */
@@ -113,11 +113,17 @@ h2{
 }
 
 
+/* --------------------------------------------------- */
+/* DIFFERENT MARGIN/PADDING/WIDTH CLASSES */
+/* --------------------------------------------------- */
+
 .margin-bottom-20 {
     margin-bottom:20px;
 }
 
-
+.margin-bottom-40 {
+    margin-bottom:40px;
+}
 
 .margin-top-bottom-10 {
     margin: 10px 0px;
@@ -135,47 +141,35 @@ h2{
     height: 200px;
 }
 
-.text-box {
-    background-color: rgb(250, 250, 250);
-    border-radius: 20px;
-    padding: 20px 30px;
-    margin-bottom: 10px;
+.margin-right-20 {
+    margin-right: 20px;
 }
 
-.width-100 {
-    width: 100px;
+.margin-right-40 {
+    margin-right: 40px;
 }
 
-.helptext {
-    font-size: 14px;
-    color: rgb(200, 200, 200);
+.margin-top-30 {
+    margin-top: 30px;
 }
 
-
-
-
-
-.width-200 {
-    width: 200px;
-    object-fit: cover;
-}
-
-.footer2 {
+.margin-top-10 {
     margin-top: 10px;
-    position: relative;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    color: white;
 }
 
 .margin-top-20 {
     margin-top: 20px;
 }
 
-.comment-container {
-    background-color: rgb(235, 235, 235);
-    padding: 5px 10px;
-    margin: 10px 0px;
-    border-radius: 10px;
+.width-100 {
+    width: 100px;
 }
+
+.width-200 {
+    width: 200px;
+    object-fit: cover;
+}
+
+
+
+
