--- a/templates/west_end_market/base.html
+++ b/templates/west_end_market/base.html
@@ -8,6 +8,7 @@
     
         <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/bootstrap.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'vendors/css/palette.css' %}">
+        <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css"/>
         <link href="https://fonts.googleapis.com/css?family=Lato:300i,400,700" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="{% static 'resourses/css/styleaddons.css' %}">
         <link rel="shortcut icon" href="{% static 'images/karotsi.ico' %}"/>
@@ -94,5 +95,26 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="{% static 'vendors/js/bootstrap.js' %}"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.js"></script>
+        <script>
+            window.addEventListener("load", function(){
+            window.cookieconsent.initialise({
+              "palette": {
+                "popup": {
+                  "background": "#060606",
+                  "text": "#ffffff"
+                },
+                "button": {
+                  "background": "#ff5722",
+                  "text": "#ffffff"
+                }
+              },
+              "theme": "classic",
+              "content": {
+                "message": "We use cookies to ensure you get the best experience on our website.",
+                "href": "#"
+              }
+            })});
+        </script>
     </body>
 </html>
