edit footer text, created gmail for contact

--- a/templates/west_end_market/base.html
+++ b/templates/west_end_market/base.html
@@ -82,10 +82,8 @@
         
         <footer class="footer mt-auto py-3 footer-style">
             <!-- DUMMY FOOTER TEXT -->
-            <div class="container">
-                <h3>FOOTER</h3>
-                <p>LLorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor.</p>
-                <p>Copyright: West End Market 2019</p>
+            <div class="footer-content">
+                <p class="text-center text-secondary"><strong><a class="text-secondary" href="{% url 'index' %}">Home</a> | Privacy Policy | <a class="text-secondary" href="mailto:gla.westendmarket@gmail.com">Contact</a> | &copy; West End Market 2019</strong></p>
             </div>
         </footer>        
         
