--- a/templates/west_end_market/cookie_policy.html
+++ b/templates/west_end_market/cookie_policy.html
@@ -32,7 +32,7 @@
     <p align="justify">If you set your internet browser preferences to block all cookies, you may not be able to access all or parts of our site.</p>
     <p align="justify">If you delete cookies relating to this website we will not remember things about you, including your cookie preferences, and you will be treated as a first-time visitor the next time you visit the site.</p>
     <p align="justify">Queries</p>
-    <p align="justify">If you have any questions or comments regarding this Cookie policy, please email <a href="#">hello@westendmarket.com</a>.</p>    
+    <p align="justify">If you have any questions or comments regarding this Cookie policy, please email <a href="mailto:gla.westendmarket@gmail.com">gla.westendmarket@gmail.com</a>.</p>    
 
 </div>   
 {% endblock %}
