--- a/static/resourses/css/styleaddons.css
+++ b/static/resourses/css/styleaddons.css
@@ -54,14 +54,14 @@ h2{
 }
 
 .text-box {
-    background-color: rgb(250, 250, 250);
+    background-color: rgb(247, 247, 247);
     border-radius: 20px;
-    padding: 20px 30px;
+    padding: 10px 30px;
     margin-bottom: 10px;
 }
 
 .comment-container {
-    background-color: rgb(235, 235, 235);
+    background-color: rgb(230, 230, 230);
     padding: 5px 10px;
     margin: 10px 0px;
     border-radius: 10px;
@@ -70,6 +70,10 @@ h2{
 .helptext {
     font-size: 14px;
     color: rgb(200, 200, 200);
+}
+
+.round-edges {
+     border-radius: 25px;
 }
 
 
@@ -140,8 +144,8 @@ h2{
     height: 100px;
 }
 
-.height-200 {
-    height: 200px;
+.height-240 {
+    height: 240px;
 }
 
 .margin-right-20 {
@@ -168,8 +172,8 @@ h2{
     width: 100px;
 }
 
-.width-200 {
-    width: 200px;
+.width-240 {
+    width: 240px;
     object-fit: cover;
 }
 
