fixed add_listing, added links to listings and made some changes to the population script

--- a/templates/west_end_market/base.html
+++ b/templates/west_end_market/base.html
@@ -11,13 +11,12 @@
         <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css"/>
         <link href="https://fonts.googleapis.com/css?family=Lato:300i,400,700" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="{% static 'resourses/css/styleaddons.css' %}">
-        <link rel="shortcut icon" href="{% static 'images/karotsi.ico' %}"/>
         <link rel="shortcut icon" href="{% static 'images/logo-title.ico' %}"/>
         
         <title>
             West End Market - 
             {% block title_block %}
-                West End Market Defult
+                West End Market Default
             {% endblock %}
         </title>
     </head>
