--- a/templates/west_end_market/index.html
+++ b/templates/west_end_market/index.html
@@ -16,40 +16,50 @@
     <hr>
     <div class="row">
         <div class="col-md-3 text-center font-weight-bold">
+            <a href="{% url 'show_listing' listings.0.id %}">
             {% if listings.0.title|length > 25 %}
                 <label>{{listings.0.title|slice:"0:25"}}...</label>
             {% else %}
                 <label>{{listings.0.title}}</label>
             {% endif %}
             <img src="{{listings.0.picture.url}}" class="img-fluid item-box-mobile height-200 width-200" alt="square image" width=300px height=300px>
+            </a>
         </div>
+
         <div class="col-md-3 text-center font-weight-bold">
+            <a href="{% url 'show_listing' listings.1.id %}">
             {% if listings.1.title|length > 25 %}
                 <label>{{listings.1.title|slice:"0:25"}}...</label>
             {% else %}
                 <label>{{listings.1.title}}</label>
             {% endif %}
             <img src="{{listings.1.picture.url}}" class="img-fluid item-box-mobile height-200 width-200" alt="square image">
+            </a>
         </div>
         <div class="col-md-3 text-center font-weight-bold">
+            <a href="{% url 'show_listing' listings.2.id %}">
             {% if listings.2.title|length > 25 %}
                 <label>{{listings.2.title|slice:"0:25"}}...</label>
             {% else %}
                 <label>{{listings.2.title}}</label>
             {% endif %}
             <img src="{{listings.2.picture.url}}" class="img-fluid item-box-mobile height-200 width-200" alt="square image">
+            </a>
         </div>
         <div class="col-md-3 text-center font-weight-bold">
+            <a href="{% url 'show_listing' listings.3.id %}">
             {% if listings.3.title|length > 25 %}
                 <label>{{listings.3.title|slice:"0:25"}}...</label>
             {% else %}
                 <label>{{listings.3.title}}</label>
             {% endif %}
             <img src="{{listings.3.picture.url}}" class="img-fluid item-box-mobile height-200 width-200" alt="square image">
+            </a>
         </div>
     </div>
     <div class="row margin-top-30">
         <div class="col-md-3 text-center font-weight-bold">
+            <a href="{% url 'show_listing' listings.4.id %}">
             {% if listings.4.title|length > 25 %}
                 <label>{{listings.4.title|slice:"0:25"}}...</label>
             {% else %}
@@ -58,28 +68,34 @@
             <img src="{{listings.4.picture.url}}" class="img-fluid item-box-mobile height-200 width-200" alt="square image">
         </div>
         <div class="col-md-3 text-center font-weight-bold">
+            <a href="{% url 'show_listing' listings.5.id %}">
                 {% if listings.5.title|length > 25 %}
                     <label>{{listings.5.title|slice:"0:25"}}...</label>
                 {% else %}
                     <label>{{listings.5.title}}</label>
                 {% endif %}
                 <img src="{{listings.5.picture.url}}" class="img-fluid item-box-mobile height-200 width-200" alt="square image">
+            </a>
         </div>
         <div class="col-md-3 text-center font-weight-bold">
+            <a href="{% url 'show_listing' listings.5.id %}">
             {% if listings.6.title|length > 25 %}
                 <label>{{listings.6.title|slice:"0:25"}}...</label>
             {% else %}
                 <label>{{listings.6.title}}</label>
             {% endif %}
             <img src="{{listings.6.picture.url}}" class="img-fluid item-box-mobile" alt="square image height-200 width-200">
+            </a>
         </div>
         <div class="col-md-3 text-center font-weight-bold">
+            <a href="{% url 'show_listing' listings.5.id %}">
             {% if listings.7.title|length > 25 %}
                 <label>{{listings.7.title|slice:"0:25"}}...</label>
             {% else %}
                 <label>{{listings.7.title}}</label>
             {% endif %}
             <img src="{{listings.7.picture.url}}" class="img-fluid item-box-mobile height-200 width-200" alt="square image">
+            </a>
         </div>
     </div>
 </div>
