--- a/static/resourses/css/styleaddons.css
+++ b/static/resourses/css/styleaddons.css
@@ -38,8 +38,12 @@ body {
 /* REUSABLE COMPONENTS */
 /* --------------------------------------------------- */
 
-h2{
+h2 {
     color: #FF5722;
+}
+
+text-black {
+    color: #212121;
 }
 
 .desktop-block-button { 
@@ -73,7 +77,7 @@ h2{
 }
 
 .round-edges {
-     border-radius: 25px;
+     border-radius: 20px;
 }
 
 
@@ -117,6 +121,22 @@ h2{
         margin-right: 10%;
         margin-top: 15px;
         text-align: center;
+    }
+    
+    .photo-fit-mobile {
+        height: 260px;
+        width: 95%;
+        object-fit: cover;
+        vertical-align: middle;
+        margin-bottom: 10px;
+    }
+    
+    .text-box-mobile {
+        background-color: rgb(247, 247, 247);
+        border-radius: 20px;
+        margin-left: 5%;
+        width: 90%;
+        align-self: center;
     }
 }
 
@@ -184,6 +204,16 @@ h2{
 .width-200 {
     width: 200px;
     object-fit: cover;
+}
+
+@media all and (min-width: 581px) {
+    .photo-fit {
+        height: 90px;
+        width: 90px;
+        object-fit: cover;
+        vertical-align: middle;
+        margin-bottom: 10px;
+    }
 }
 
 
