--- a/templates/west_end_market/base.html
+++ b/templates/west_end_market/base.html
@@ -94,6 +94,22 @@
         <script src="{% static 'vendors/js/bootstrap.js' %}"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.js"></script>
         <script>
+            var modal = document.getElementById('myModal');
+            var img = document.getElementById('myImg');
+            var modalImg = document.getElementById("img01");
+            var captionText = document.getElementById("caption");
+            img.onclick = function(){
+                modal.style.display = "block";
+                modalImg.src = this.src;
+                captionText.innerHTML = this.alt;
+            }
+            var span = document.getElementsByClassName("close")[0];
+
+            span.onclick = function() { 
+            modal.style.display = "none";
+            }
+        </script>
+        <script>
             window.addEventListener("load", function(){
             window.cookieconsent.initialise({
               "palette": {
