report listing converted to red button

--- a/templates/west_end_market/listing.html
+++ b/templates/west_end_market/listing.html
@@ -39,7 +39,7 @@
                         <p><strong>Postcode: </strong>{{listing.postcode}}</p>
                     </div>
                     <div class="row">
-                        <p><a href="mailto:gla.westendmarket@gmail.com?subject=West%20End%20Market:%20Reported%20Listing&body=User%20reports%20the%20following%20listing:%20{{listing.title}}%0D%0A%0D%0APlease%20provide%20additional%20information%20for%20the%20report%20below:%0D%0A%0D%0A%0D%0A">Report Listing</a></p>
+                        <p><a class="btn btn-danger" href="mailto:gla.westendmarket@gmail.com?subject=West%20End%20Market:%20Reported%20Listing&body=User%20reports%20the%20following%20listing:%20{{listing.title}}%0D%0A%0D%0APlease%20provide%20additional%20information%20for%20the%20report%20below:%0D%0A%0D%0A%0D%0A">Report Listing</a></p>
                     </div>
                 </div>
             </div>
