added category and user pages and relevant urls

--- a/templates/west_end_market/add_listing.html
+++ b/templates/west_end_market/add_listing.html
@@ -40,6 +40,10 @@
                     <select required id="id_category" class="form-control text-capitalize" name="category">
                         {{form.category.1}}
                         {{form.category.2}}
+                        {{form.category.3}}
+                        {{form.category.4}}
+                        {{form.category.5}}
+                        {{form.category.6}}
                     </select>
                 </div>
                 <div class="form-group font-weight-bold">
