--- a/templates/west_end_market/user_profile.html
+++ b/templates/west_end_market/user_profile.html
@@ -10,42 +10,23 @@
     <form>
         <div class="row"> 
             <div class="col-md-12 margin-top-10">
-                <h3>Username's Listings</h3>
+                <h3>{{user.username}} Listings</h3>
             </div>
         </div>
-        <div class="margin-top-bottom-10 row"> 
+        <div class="margin-top-bottom-10 row">
+            {% for listing in listings %}
             <div class="col-md-2">
                 <div class="text-center">
-                    <img src="{% static 'images/placeholder.jpg' %}" alt="image of the item" width=100 height=100>
+                    <a href="{% url 'show_listing' listing.id %}"><img src="{{listing.picture.url}}" alt="image of the item" width=100 height=100></a>
                 </div>
             </div>    
             <div class="text-box width-100 height-100 col-md-10">
-                <p>Item Name:</p>
-                <p>Price:</p>
+                <p><strong>Item Name:</strong> {{listing.title}}</p>
+                <p><strong>Price:</strong> {{listing.price}}</p>
             </div>
+            {% endfor %}
         </div>
-        <div class="margin-top-bottom-10 row"> 
-            <div class="col-md-2">
-                <div class="text-center">
-                    <img src="{% static 'images/placeholder.jpg' %}" alt="image of the item" width=100 height=100>
-                </div>
-            </div>        
-            <div class="text-box width-100 height-100 col-md-10">
-                <p>Item Name:</p>
-                <p>Price:</p>
-            </div>
-        </div>
-        <div class="margin-top-bottom-10 row"> 
-            <div class="col-md-2">    
-                <div class="text-center">
-                    <img src="{% static 'images/placeholder.jpg' %}" alt="image of the item" width=100 height=100>
-                </div>
-            </div>        
-            <div class="text-box width-100 height-100 col-md-10">
-                <p>Item Name:</p>
-                <p>Price:</p>
-            </div>
-        </div>
+
     </form>
 </div>    
 {% endblock %}
