--- a/templates/west_end_market/listing.html
+++ b/templates/west_end_market/listing.html
@@ -9,7 +9,7 @@
 <div class="container margin-top-20">
         {% if listing %}
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-3 text-center">
                     <h3>{{listing.title}}</h3>
                 </div>
             </div>
