--- a/templates/west_end_market/add_listing.html
+++ b/templates/west_end_market/add_listing.html
@@ -11,7 +11,7 @@
         {% csrf_token %}
         <div class="row">
             <div class="col-md-4">
-                <h3>Create a Listing</h3>
+                <h3 class="text-center">Create a Listing</h3>
                         
                 <div class="text-center">
                     <img id="id_placeholder" class="img-thumbnail"  src="{% static 'images/placeholder.jpg' %}" alt="image of the item" width=200 height=200>
@@ -27,15 +27,15 @@
                     
             <div class="col-md-8">
                 <div class="form-group font-weight-bold">
-                    <label>Title of item:</label>
+                    <label>Title of item</label>
                     <input required id="id_title" type="text" class="form-control font-italic" placeholder="Add Title (i.e bicycle)" name="title">
                 </div>
                 <div class="form-group font-weight-bold">
-                    <label>Price:</label>
+                    <label>Price</label>
                     <input required id="id_price" type="text" class="form-control font-italic" placeholder="Add Price" name="price">
                 </div>
                 <div class="form-group font-weight-bold">
-                    <label>Category:</label>
+                    <label>Category</label>
 
                     <select required id="id_category" class="form-control text-capitalize" name="category">
                         {{form.category.1}}
@@ -47,11 +47,11 @@
                     </select>
                 </div>
                 <div class="form-group font-weight-bold">
-                    <label>Postcode:</label>
+                    <label>Postcode</label>
                     <input required id="id_postcode" type="text" class="form-control font-italic" placeholder="Add Postcode (i.e G11 6QH)" name="postcode">
                 </div>
                 <div class="form-group font-weight-bold">
-                    <label>Description:</label>
+                    <label>Description</label>
                     <textarea required id="id_description" class="form-control font-italic" placeholder="Add description" name="description"></textarea>
                 </div>
                         
