template register update messages

--- a/templates/west_end_market/loginpage.html
+++ b/templates/west_end_market/loginpage.html
@@ -7,6 +7,17 @@
 {% endblock %}
 
 {% block body_block %}
+<!--
+        {% if user.is_active %}
+            <div class="alert alert-success" role="alert">
+                You have successfully logged in!
+            </div>
+        {% else %}
+            <div class="alert alert-danger" role="alert">
+              Invalid login details supplied!
+            </div>
+        {% endif %}
+-->
         <div>
             <div class="container">
                 <h3 class="text-center margin-top-30">Login</h3>
