--- a/templates/west_end_market/user_profile.html
+++ b/templates/west_end_market/user_profile.html
@@ -17,7 +17,7 @@
             {% for listing in listings %}
             <div class="col-md-2">
                 <div class="text-center">
-                    <a href="{% url 'show_listing' listing.id %}"><img src="{{listing.picture.url}}" alt="image of the item" width=100 height=100></a>
+                    <a href="{% url 'show_listing' listing.id %}"><img id="myImg" src="{{listing.picture.url}}" alt="image of the item" width=100 height=100></a>
                 </div>
             </div>    
             <div class="text-box width-100 height-100 col-md-10">
