--- a/templates/west_end_market/register.html
+++ b/templates/west_end_market/register.html
@@ -8,10 +8,24 @@
 {% block body_block %}
 {% if registered %}
     <div class="alert alert-success" role="alert">
-        You have successfully created a new account!
+        <span>&#10004; You have successfully created a new account!</span>
         <a href=" {% url 'login' %} ">Click here to login!</a>
     </div>
 {% endif %}
+                <div>
+                    {% if user_form.errors%}
+                        {% for error in user_form %}
+                            {% for r in error.errors %}
+                            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                                <span>{{r}}</span>
+                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                    <span class="reduce-size align-text-top" aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            {% endfor %}
+                        {% endfor %}
+                    {% endif %}
+                </div>
 <div class="container margin-top-30">
     <form id="listing_form" method = 'post' enctype="multipart/form-data" action="{% url 'register' %}">
         {% csrf_token %}
@@ -47,17 +61,6 @@
                 <div class="text-right">
                     <button class="btn btn-primary block-button" type="submit" value="submit" >Register</button>
                 </div>
-                <div class="margin-top-20">
-                    {% if user_form.errors%}
-                        <div class="alert alert-warning" role="alert">
-                            {{user_form.errors}}
-                        </div>
-                    {% endif %}
-                    {% if profile_form.errors%}
-                        <div class="alert alert-warning" role="alert">
-                            {{profile_form.errors}}
-                        </div>
-                    {% endif %}</div>
             </div>
         </div>       
     </form>
