--- a/templates/west_end_market/user_profile.html
+++ b/templates/west_end_market/user_profile.html
@@ -10,17 +10,18 @@
     <form>
         <div class="row"> 
             <div class="col-md-12 margin-top-10">
-                <h3>{{user.username}} Listings</h3>
+                <h3>{{user.username}} listings</h3>
+                <hr>
             </div>
         </div>
         <div class="margin-top-bottom-10 row">
             {% for listing in listings %}
             <div class="col-md-2">
                 <div class="text-center">
-                    <a href="{% url 'show_listing' listing.id %}"><img id="myImg" src="{{listing.picture.url}}" alt="image of the item" width=100 height=100></a>
+                    <a href="{% url 'show_listing' listing.id %}"><img class="photo-fit-mobile" id="myImg" src="{{listing.picture.url}}" alt="image of the item" width=100 height=100></a>
                 </div>
             </div>    
-            <div class="text-box width-100 height-100 col-md-10">
+            <div class="text-box col-md-9 text-box-mobile">
                 <p><strong>Item Name:</strong> {{listing.title}}</p>
                 <p><strong>Price:</strong> {{listing.price}}</p>
             </div>
