--- a/templates/west_end_market/base.html
+++ b/templates/west_end_market/base.html
@@ -53,8 +53,8 @@
                             </div>
                         </li>
                     </ul>
-                    <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <form id = "searchform" method="POST" action="{% url 'search_results' %}" class="form-inline my-2 my-lg-0">{% csrf_token %}
+                        <input name="search" id="searchbox" value = "{{request.GET.search}}" class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
                         <button class="btn btn-success my-2 my-sm-0 margin-right-40 block-button" type="submit">Search &#x1F50D;</button>
                     </form>
                     <ul class="navbar-nav mr-auto">
