--- a/templates/west_end_market/loginpage.html
+++ b/templates/west_end_market/loginpage.html
@@ -51,12 +51,12 @@
                     </div>
                     <div class="col-md-5">
                         <div class="margin-top-30">
-							<a href="{% url 'social:begin' 'facebook' %}">Login with Facebook</a>
-                            <!--<button class="btn btn-primary desktop-block-button">Login with Facebook</button>-->
+							<a href="{% url 'social:begin' 'facebook' %}"><button class="btn btn-primary desktop-block-button">Login with Facebook</button></a>
+                            
                         </div>
                         <div class="margin-top-30">
-							<a href="{% url 'social:begin' 'google-oauth2' %}">Login with Google</a>
-                            <!--<button class="btn btn-danger desktop-block-button">Login with Google</button>-->
+							<a href="{% url 'social:begin' 'google-oauth2' %}"><button class="btn btn-danger desktop-block-button">Login with Google</button></a>
+                            
                         </div>
                     </div>
                 </div>
