--- a/templates/west_end_market/loginpage.html
+++ b/templates/west_end_market/loginpage.html
@@ -7,17 +7,12 @@
 {% endblock %}
 
 {% block body_block %}
-<!--
-        {% if user.is_active %}
-            <div class="alert alert-success" role="alert">
-                You have successfully logged in!
-            </div>
-        {% else %}
-            <div class="alert alert-danger" role="alert">
-              Invalid login details supplied!
-            </div>
-        {% endif %}
--->
+{% if not success %}
+    <div class="alert alert-danger" role="alert">
+        <span>&#10004; Invalid login details, please try again!</span>
+    </div>
+{% endif %}
+
         <div>
             <div class="container">
                 <h3 class="text-center margin-top-30">Login</h3>
