--- a/templates/west_end_market/base.html
+++ b/templates/west_end_market/base.html
@@ -37,7 +37,7 @@
                             <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">All Listings</a>
+                            <a class="nav-link" href="{% url 'show_category' 'all' %}">All Listings</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Categories</a>
@@ -60,7 +60,7 @@
                     <ul class="navbar-nav mr-auto">
                         {% if user.is_authenticated %}
                             <li class="nav-item">
-                                <a href="#" class="btn btn-primary margin-right-20 block-button">My account</a>
+                                <a href="{% url 'my_account' %}" class="btn btn-primary margin-right-20 block-button">My account</a>
                             </li>
                             <li class="nav-item">
                                 <a href="{% url 'logout' %}" class="btn btn-danger margin-right-20 block-button">Logout</a>
