--- a/templates/west_end_market/edit_profile.html
+++ b/templates/west_end_market/edit_profile.html
@@ -2,16 +2,10 @@
 {% load staticfiles %}
 
 {% block title_block %}
-    Register
+    Edit Profile
 {% endblock %}
 
 {% block body_block %}
-{% if registered %}
-    <div class="alert alert-success" role="alert">
-        <span>&#10004; You have successfully created a new account!</span>
-        <a href=" {% url 'login' %} ">Click here to login!</a>
-    </div>
-{% endif %}
                 <div>
                     {% if user_form.errors%}
                         {% for error in user_form %}
@@ -27,17 +21,21 @@
                     {% endif %}
                 </div>
 <div class="container margin-top-30">
-    <form id="register_form" method = 'post' enctype="multipart/form-data" action="{% url 'register' %}">
+    <form id="register_form" method = 'post' enctype="multipart/form-data" action="{% url 'edit_profile' %}">
         {% csrf_token %}
         <div class="row">
             <div class="col-md-4 text-center">
-                <h3>User Registration</h3>
+                <h3>Edit Profile</h3>
                 <div class="text-center">
-                    <img id="id_placeholder" class="img-thumbnail"  src="{% static 'images/placeholder.jpg' %}" alt="image of the item" width=200 height=200>
+                    {% if profile.picture.url %}
+                        <img id="id_profile" class="img-thumbnail"  src="{{profile.picture.url}}" alt="image of the item" width=200 height=200>
+                    {% else %}
+                        <img id="id_placeholder" class="img-thumbnail"  src="{% static 'images/profile.jpg' %}" alt="image of the item" width=200 height=200>
+                    {% endif %}
                 </div>
                         
                 <div class="form-group text-center font-weight-bold ">
-                    <label>Upload Image</label>
+                    <label>Change profile picture</label>
                     <input id="id_picture" type="file" name="picture" onchange="readURL(this);">
                     <br>
                 </div>
@@ -46,20 +44,20 @@
             <div class="col-md-8">
                 <div class="form-group font-weight-bold">
                     <label>Username</label>
-                    <input required id="id_username" type="text" class="form-control font-italic" placeholder="i.e JohnMathew" name="username">
+                    <input required id="id_username" type="text" class="form-control font-italic" value ="{{user.username}}" name="username">
                     <p class="text-left helptext">Required. 25 characters or fewer. Letters, digits and @/./+/-/_ only.</p>
                 </div>
                 <div class="form-group font-weight-bold">
                     <label>Email address</label>
-                    <input required id="id_email" type="email" class="form-control font-italic" placeholder="myusername@gmail.com" name="email">
+                    <input required id="id_email" type="email" class="form-control font-italic" value ="{{user.email}}" name="email">
                 </div>
                 <div class="form-group font-weight-bold">
                     <label>Password</label>
-                    <input required id="id_password" type="password" class="form-control font-italic" placeholder="Password" name="password">
+                    <input required id="id_password" type="password" class="form-control font-italic" value="{{user.password}}" name="password">
                 </div>
                         
                 <div class="text-right">
-                    <button class="btn btn-primary block-button" type="submit" value="submit" >Register</button>
+                    <button class="btn btn-primary block-button" type="submit" value="submit" >Update Profile</button>
                 </div>
             </div>
         </div>       
@@ -74,6 +72,7 @@ function readURL(input) {
 
         reader.onload = function(e) {
             $('#id_placeholder').attr({'src': e.target.result});
+            $('#id_profile').attr({'src': e.target.result});
         }
 
     reader.readAsDataURL(input.files[0]);
