--- a/templates/west_end_market/listing.html
+++ b/templates/west_end_market/listing.html
@@ -39,13 +39,20 @@
                         <p><strong>Postcode: </strong>{{listing.postcode}}</p>
                     </div>
                     <div class="row">
+                        <p><strong>Date Added: </strong>{{listing.date.date}}</p>
+                    </div>
+                    <div class="row">
                         <p><strong>User: </strong><a class="text-decoration-none" href="{% url 'user_profile' listing.user.username %}">{{listing.user.username}}</a></p>
                     </div>
                     <div class="row">
                         <p><strong>Email: </strong>{{listing.user.email}}</p>
                     </div>
                     <div class="row">
-                        <p><a class="btn btn-danger" href="mailto:gla.westendmarket@gmail.com?subject=West%20End%20Market:%20Reported%20Listing&body=User%20reports%20the%20following%20listing:%20{{listing.title}}%0D%0A%0D%0APlease%20provide%20additional%20information%20for%20the%20report%20below:%0D%0A%0D%0A%0D%0A">Report Listing</a></p>
+                        {% if user == listing.user %}
+                            <p><a class="btn btn-primary" href="{% url 'edit_listing' listing.id %}">Edit Listing</a></p>
+                        {% else %}
+                            <p><a class="btn btn-danger" href="mailto:gla.westendmarket@gmail.com?subject=West%20End%20Market:%20Reported%20Listing&body=User%20reports%20the%20following%20listing:%20{{listing.title}}%0D%0A%0D%0APlease%20provide%20additional%20information%20for%20the%20report%20below:%0D%0A%0D%0A%0D%0A">Report Listing</a></p>
+                        {% endif %}
                     </div>
                 </div>
             </div>
