--- a/templates/west_end_market/user_profile.html
+++ b/templates/west_end_market/user_profile.html
@@ -24,6 +24,7 @@
             <div class="text-box col-md-9 text-box-mobile">
                 <p><strong>Item Name:</strong> {{listing.title}}</p>
                 <p><strong>Price:</strong> {{listing.price}}</p>
+                <p><strong>Date:</strong> {{listing.date.date}}</p>
             </div>
             {% endfor %}
         </div>
