--- a/templates/west_end_market/edit_profile.html
+++ b/templates/west_end_market/edit_profile.html
@@ -21,7 +21,7 @@
                     {% endif %}
                 </div>
 <div class="container margin-top-30">
-    <form id="register_form" method = 'post' enctype="multipart/form-data" action="{% url 'edit_profile' %}">
+    <form id="edit_profile_form" method = 'post' enctype="multipart/form-data" action="{% url 'edit_profile' %}">
         {% csrf_token %}
         <div class="row">
             <div class="col-md-4 text-center">
