added link to cookies page

--- a/templates/west_end_market/base.html
+++ b/templates/west_end_market/base.html
@@ -89,8 +89,7 @@
         <footer class="footer mt-auto py-3 footer-style">
             <!-- DUMMY FOOTER TEXT -->
             <div class="footer-content">
-                <p class="text-center text-secondary"><strong><a class="text-secondary" href="{% url 'index' %}">Home</a> | Privacy Policy | <a class="text-secondary" href="mailto:gla.westendmarket@gmail.com">Contact</a> | &copy; West End Market 2019</strong></p>
-                <p class="text-center text-secondary"><strong><a class="text-secondary" href="{% url 'index' %}">Home</a> | Cookie Policy | <a class="text-secondary" href="mailto:gla.westendmarket@gmail.com">Contact</a> | &copy; West End Market 2019</strong></p>
+                <p class="text-center text-secondary"><a><a class="text-secondary" href="{% url 'index' %}">Home</a> | <a class="text-secondary" href="{% url 'cookie_policy' %}">Cookie Policy</a> | <a class="text-secondary" href="mailto:gla.westendmarket@gmail.com">Contact</a> | &copy; West End Market 2019</strong></p>
             </div>
         </footer>        
         
