--- a/templates/west_end_market/cookie_policy.html
+++ b/templates/west_end_market/cookie_policy.html
@@ -1,4 +1,4 @@
-% extends 'west_end_market/base.html' %}
+{% extends 'west_end_market/base.html' %}
 {% load staticfiles %}
 
 {% block title_block %}
